application du style,affichage des images pemier commit

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section id="titre">
+        <h1></h1>
+        <p></p>
+    </section>
+    <section id="tableau">
+        <div id="produits">
+        </div>
+        
+        </section>
+    </section>
+    <section><div id="commentaires"></div></section>
+    
     <script src="script.js"></script>
 </body>
 </html>
